axum-macros/tests/debug_handler/fail/wrong_return_type.rs
use axum_macros::debug_handler;

#[debug_handler]
async fn handler() -> bool {
    false
}

fn main() {}
