axum-macros/tests/debug_handler/fail/wrong_return_type.stderr
error[E0277]: the trait bound `bool: IntoResponse` is not satisfied
 --> tests/debug_handler/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ the trait `IntoResponse` is not implemented for `bool`
  |
  = help: the following other types implement trait `IntoResponse`:
            &'static [u8]
            &'static str
            ()
            (Response<()>, R)
            (Response<()>, T1, R)
            (Response<()>, T1, T2, R)
            (Response<()>, T1, T2, T3, R)
            (Response<()>, T1, T2, T3, T4, R)
          and 123 others
note: required by a bound in `check`
 --> tests/debug_handler/fail/wrong_return_type.rs:4:23
  |
4 | async fn handler() -> bool {
  |                       ^^^^ required by this bound in `check`
